fixed gaps

--- a/taskapp/app/assets/stylesheets/application.css
+++ b/taskapp/app/assets/stylesheets/application.css
@@ -15,6 +15,7 @@
  */
 
  .wrapper {
+   overflow: hidden;
    padding-left: 18px;
    padding-right: 18px;
    max-width: 1236px;
